--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
         <span>Recife Tour</span>
         <nav>
             <ul>
-                <li>Pontos Turísticos</li>
+                <li><a href="pontos_turisticos.html">Pontos Turísticos</a></li>
                 <li>História</li>
                 <li>Passeios</li>
             </ul>
